# ws-prospector

./: .env.example  .gitignore  AGENTS.md  README.md  appcast.xml  package.json  pnpm-lock.yaml  pyproject.toml
apps/extension/: .gitignore  .oxlintrc.json  AGENTS.md  README.md  manifest.config.ts  package.json  pnpm-lock.yaml  prd.md  tsconfig.json  vite.config.ts
apps/extension/docs/: README.md  architecture.md  data-model.md  debugging.md  modules.md  roadmap.md
apps/extension/scripts/: devtools-tail.mjs
apps/extension/src/background/: index.ts
apps/extension/src/content/: main.ts  sidebar.css
assets/icons/: app.icns
docs/: API.md  README.md  architecture.md  auto-connector.md  data-storage.md  release-process.md  sales-navigator.md  search-extraction.md  setup-and-run.md
scripts/: build_release.sh  macos_launcher.swift  pyinstaller_entry.py
skills/linkedin-prospect-collector/: SKILL.md
src/linkedin_leads/: __init__.py  app.py  browser_lock.py  config.py  connect_worker.py  debug.py  models.py  profile_scraper.py  run_labels.py  storage.py
src/linkedin_leads/auth/: session_manager.py
src/linkedin_leads/frontend/: index.html
src/linkedin_leads/parsers/: common.py  company_parser.py  navigator_parser.py  profile_parser.py  search_parser.py
src/linkedin_leads/spiders/: base.py  company.py  sales_nav.py  search.py  url_scraper.py
tests/: test_connect_worker.py  test_debug_cli.py  test_models.py  test_parsers.py  test_profile_parser.py  test_profile_scraper.py  test_spider_base.py  test_storage.py  test_url_scraper.py
(+15 files in other folders)
