[project]
name = "wealthsimple-prospector"
version = "0.1.0"
description = "Wealthsimple Prospector - lead discovery tool with web UI"
requires-python = ">=3.10"
dependencies = [
    "scrapling[fetchers]>=0.4",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "sse-starlette>=2.0",
]

[project.scripts]
ws-prospector = "linkedin_leads.app:main"
ws-prospector-debug = "linkedin_leads.debug:main"
ws-prospector-cli = "linkedin_leads.debug:main"
li-leads = "linkedin_leads.app:main"
li-leads-debug = "linkedin_leads.debug:main"
li-leads-cli = "linkedin_leads.debug:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_leads"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "pytest>=9.0.2",
]
